# yfinance-cache

./: pyproject.toml  run-tests.sh
yfinance_cache/: yfc_prices_manager.py
